# poetry-demo

./: README.md  pyproject.toml  requirements.txt
src/poetry_demo/: __init__.py  print_structure.py
tests/: test_poetry_demo.py
