[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["goldin2008 <goldin20082011@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
