[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["goldin2008 <goldin20082011@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
